[gd_scene load_steps=48 format=3 uid="uid://c6xelk72wrpff"]

[ext_resource type="Script" path="res://codigo/canon_enemy.gd" id="1_4us5o"]
[ext_resource type="Texture2D" uid="uid://dy3c1ewjllii7" path="res://craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/4/Attack.png" id="3_f3r54"]
[ext_resource type="Texture2D" uid="uid://bry1ujrj11gyh" path="res://craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/4/Hit.png" id="4_u7e2r"]
[ext_resource type="Texture2D" uid="uid://cuxdn8gpuwws2" path="res://craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/4/Idle.png" id="5_wsmtc"]
[ext_resource type="Texture2D" uid="uid://m0lluveyvxp8" path="res://craftpix-net-396765-free-simple-platformer-game-kit-pixel-art/4 Enemies/4/Walk.png" id="6_ups7v"]
[ext_resource type="PackedScene" uid="uid://0e64jei85yn6" path="res://escenas/dead_zone.tscn" id="7_k10f2"]
[ext_resource type="PackedScene" uid="uid://bl8eqbx2ku0i0" path="res://escenas/bounce_zone.tscn" id="8_5r1rx"]
[ext_resource type="AudioStream" uid="uid://dh24k6py0iw68" path="res://sonidos/pixel-death-66829.mp3" id="9_4tqu2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qrblv"]
atlas = ExtResource("3_f3r54")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe3tj"]
atlas = ExtResource("3_f3r54")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk3p5"]
atlas = ExtResource("3_f3r54")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kav1"]
atlas = ExtResource("3_f3r54")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_26qlo"]
atlas = ExtResource("3_f3r54")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4g4x"]
atlas = ExtResource("3_f3r54")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bchtq"]
atlas = ExtResource("3_f3r54")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_icpjn"]
atlas = ExtResource("4_u7e2r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1xlt"]
atlas = ExtResource("4_u7e2r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_or2cq"]
atlas = ExtResource("4_u7e2r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6yec"]
atlas = ExtResource("4_u7e2r")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1770"]
atlas = ExtResource("4_u7e2r")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mei7f"]
atlas = ExtResource("5_wsmtc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_glc7i"]
atlas = ExtResource("5_wsmtc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmbba"]
atlas = ExtResource("5_wsmtc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxc2"]
atlas = ExtResource("5_wsmtc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q3sc"]
atlas = ExtResource("5_wsmtc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a32j"]
atlas = ExtResource("5_wsmtc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl48r"]
atlas = ExtResource("5_wsmtc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_40uh3"]
atlas = ExtResource("5_wsmtc")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbs7n"]
atlas = ExtResource("5_wsmtc")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny1gk"]
atlas = ExtResource("5_wsmtc")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m2we"]
atlas = ExtResource("5_wsmtc")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tl0y"]
atlas = ExtResource("6_ups7v")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdc1"]
atlas = ExtResource("6_ups7v")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc68a"]
atlas = ExtResource("6_ups7v")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r3ei"]
atlas = ExtResource("6_ups7v")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyam2"]
atlas = ExtResource("6_ups7v")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuw3o"]
atlas = ExtResource("6_ups7v")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwxto"]
atlas = ExtResource("6_ups7v")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr7su"]
atlas = ExtResource("6_ups7v")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_snnnd"]
atlas = ExtResource("6_ups7v")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2e4l"]
atlas = ExtResource("6_ups7v")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eslf"]
atlas = ExtResource("6_ups7v")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oppfo"]
atlas = ExtResource("6_ups7v")
region = Rect2(528, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kisx6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrblv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe3tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk3p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kav1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26qlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4g4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bchtq")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icpjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1xlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or2cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6yec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1770")
}],
"loop": true,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mei7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glc7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmbba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q3sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl48r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40uh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbs7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny1gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m2we")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tl0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc68a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r3ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyam2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuw3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwxto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr7su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snnnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2e4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eslf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oppfo")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_514db"]
radius = 6.0
height = 22.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ys71e"]
a = Vector2(19, 10)
b = Vector2(2.99997, 10)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k251p"]
radius = 3.0
height = 14.0

[node name="canon_enemy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_4us5o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -9)
sprite_frames = SubResource("SpriteFrames_kisx6")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.39773

[node name="dead_zone" parent="." instance=ExtResource("7_k10f2")]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="dead_zone"]
position = Vector2(0, 17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_514db")

[node name="RayCastleft" type="RayCast2D" parent="."]
position = Vector2(1, 4)
rotation = 1.5708
target_position = Vector2(6.11959e-07, 14)
collision_mask = 5

[node name="RayCastright" type="RayCast2D" parent="."]
position = Vector2(-1, 4)
rotation = -1.5708
target_position = Vector2(-5.24537e-07, 12)
collision_mask = 5

[node name="bounce_zone" parent="." instance=ExtResource("8_5r1rx")]
position = Vector2(2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce_zone"]
position = Vector2(9, -2)
rotation = 3.14159
shape = SubResource("SegmentShape2D_ys71e")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="sound_dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4tqu2")
bus = &"Sound effects"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_k251p")
one_way_collision = true

[node name="RayCastAttack" type="RayCast2D" parent="."]
position = Vector2(1, 8)
rotation = 1.5708
target_position = Vector2(0, 300)
collision_mask = 2

[node name="attack" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="dead_zone" to="." method="_on_dead_zone_body_entered"]
[connection signal="body_entered" from="bounce_zone" to="." method="_on_bounce_zone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attack" to="." method="_on_stun_timeout"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
